welcome.lessons.welcome.array.golomb.Golomb.scala.error
golomb:3: error: type mismatch;
 found   : Unit
 required: Array[Int]
  var T : Array[Int] = for (i <- 0 to num -1)
                              ^golomb:6: error: type mismatch;
 found   : Unit
 required: Int
  }
  ^