welcome.lessons.welcome.array.golomb.Golomb.scala.code
def golomb(num:Int): Int = {
  
  var T : Array[Int] = for (i <- 0 to num -1)
 	{T(i)= 0 }
  
  }
